[package]
name = "crabo"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.26", features = ["serde"] }
futures = { version = "0.3.30", features = ["async-await"] }
lru = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.1"
log = "0.4.20"
tokio-util = "0.7.10"
url = { version = "2.5.0", features = ["serde"] }
lol_html = "1.2.0"
mime_guess = "2.0.4"
itertools = "0.12.1"
texting_robots = "0.2.2"

# local
fedineko_http_client = { path = "../common/clients/fedineko_http_client" }
fedineko_url_utils = { path = "../common/fedineko_url_utils" }
proxydon_client = { path = "../common/clients/proxydon_client" }
proxydon_cache = { path = "../common/clients/proxydon_cache" }
crabo_model = { path = "../models/crabo_model" }
language_utils = { path = "../common/language_utils" }

[dev-dependencies]
actix-rt = "2.9.0"
